2004-04-14  Larry Ewing  <lewing@ximian.com>

	* gui/calendar-component.c (selector_tree_drag_motion): fix
	missing parameters, wow that was a mess.

	* gui/dialogs/calendar-setup.glade: add the new "new" dialogs,
	remove the old druids.

	* gui/dialogs/calendar-setup.c (calendar_setup_new_calendar): use
	the new dialogs, colors are still not functional.
	(calendar_setup_new_task_list): use the new dialogs, with no colors.

2004-04-14  JP Rosevear <jpr@ximian.com>

	Fixes #56613
	
	* gui/gnome-cal.h: add proto

	* gui/gnome-cal.c (client_cal_opened_cb): key the clients by uid
	(backend_died_cb): ditto
	(gnome_calendar_add_source): ditto
	(gnome_calendar_remove_source): use remove_source_by_uid
	(gnome_calendar_remove_source_by_uid): new function to remove a
	source by uid
	(gnome_calendar_set_default_source): key the clients by uid

	* gui/calendar-component.c (update_task_selection): the source
	could be NULL if the source was deleted rather than unchecked
	(update_primary_task_selection): look at the task source list

2004-04-14  JP Rosevear <jpr@ximian.com>

	Fixes #56553
	
	* importers/icalendar-importer.c (prepare_events): don't double
	free or continue, we need to move to the next item
	 (prepare_tasks): don't continue, move to the next item
	
2004-04-14  Not Zed  <NotZed@Ximian.com>

	* gui/tasks-component.c (impl_createControls): Same as below for
	the tasks component.

	* gui/calendar-component.c (impl_createControls): add the info
	area label widget to the sidebar control (c&p the addressbook
	code).

2004-04-12  Gary Ekker  <gekker@novell.com>

        Fixes #56628
	
	* gui/calendar-component.c (create_new_event): Add informational dialog
	when user attempts event creation in read-only calendar.
	

2004-04-09  Gary Ekker  <gekker@novell.com>

	* gui/dialogs/url-editor-dialog.c: Fixed to use e-passwords.

	* gui/dialogs/cal-prefs-dialog.c: Fixed crash and bugs created by 
	changes made for instant apply.

	* gui/itip-utils.c: Fixed to use e-passwords.
